// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tab /> should render correctly if not active 1`] = `
<_default
  item={
    Object {
      "label": "label",
      "value": false,
    }
  }
  onSelectItem={[MockFunction]}
>
  <styled__Tab
    active={false}
    onClick={[Function]}
  >
    <div
      className="styled__Tab-xs9hpj-2 aVytJ"
      onClick={[Function]}
    >
      label
    </div>
  </styled__Tab>
</_default>
`;

exports[`<Tab /> should render correctly with full props 1`] = `
<_default
  item={
    Object {
      "label": "label",
      "value": true,
    }
  }
  onSelectItem={[MockFunction]}
>
  <styled__Tab
    active={true}
    onClick={[Function]}
  >
    <div
      className="styled__Tab-xs9hpj-2 gUllGI"
      onClick={[Function]}
    >
      label
    </div>
  </styled__Tab>
</_default>
`;
